[package]
name = "account-manager-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
crossterm = "0.26.1"
mpsc = "0.1.0"
serde = "1.0.160"
serde_derive = "1.0.160"
toml = "0.7.3"
tui = "0.19.0"
